--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@ant-design/plots": "^1.2.5",
     "@ant-design/pro-components": "^2.4.9",
     "@umijs/max": "^4.0.66",
     "antd": "^5.4.6"
